Project

General

Profile

Actions

Bug #53788

closed

radosgw should reopen ops log file on SIGHUP

Added by Cory Snyder over 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

100%

Source:
Tags:
Backport:
pacific quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In order to ensure that ops logs files can be rotated without possible loss of log lines, radosgw should reopen ops logs files when it receives a SIGHUP.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #55996: pacific: radosgw should reopen ops log file on SIGHUPResolvedCory SnyderActions
Copied to rgw - Backport #55997: quincy: radosgw should reopen ops log file on SIGHUPResolvedCory SnyderActions
Actions #1

Updated by Casey Bodley about 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 44488

thanks Cory, the PR #44488 merged to master. if this needs backports, can you please add backport tags and set status to Pending Backport? otherwise you can move to Resolved

Actions #2

Updated by Cory Snyder almost 2 years ago

  • Backport set to quincy,pacific
Actions #3

Updated by Cory Snyder almost 2 years ago

hey Casey, this one slipped through the cracks until I just realized that it had never been backported. It doesn't look like I have the ability to change the 'Status' field?

Actions #4

Updated by Cory Snyder almost 2 years ago

  • Backport changed from quincy,pacific to pacific
Actions #5

Updated by Casey Bodley almost 2 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from pacific to pacific quincy
Actions #6

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #55996: pacific: radosgw should reopen ops log file on SIGHUP added
Actions #7

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #55997: quincy: radosgw should reopen ops log file on SIGHUP added
Actions #8

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #9

Updated by Konstantin Shalygin over 1 year ago

  • Tracker changed from Feature to Bug
  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
  • Tags deleted (backport_processed)
  • Regression set to No
  • Severity set to 3 - minor
Actions

Also available in: Atom PDF